Fix: ChatPanel scrollable on Safari
Fixes the issue where the ChatPanel was not scrollable on Safari.

--- a/frontend/srcs/components/UI/iPongChatComponents/ChatPanel/ChatPanel.css
+++ b/frontend/srcs/components/UI/iPongChatComponents/ChatPanel/ChatPanel.css
@@ -4,11 +4,32 @@
     /* height: 600px; */
     overflow-y: auto;
     overflow-x: auto;
+    overflow:scroll !important;
+
+margin-top: 1px;
+   
+    width: 100%;
+    height: 100%;
+   
 }
+
+
+.ChatPanel-frame{
+  overflow: hidden; 
+}
+
+.ChatPanel-frame {
+  overflow: -moz-scrollbars-none;
+  -ms-overflow-style: none;
+}
+
+.ChatPanel-frame::-webkit-scrollbar {
+  display: none; 
+}
+
   
   .RightChatBubbles-frame {
     margin-left: 15px !important;
-
       align-self: flex-start; 
       
     }
